# kafka_dae_control

./: .buildinfo  .gitattributes  .gitignore  Dockerfile  README.md  _api.html  architectural_decision_records.html  config.example.toml  genindex.html  index.html  local_development.html  main.py  objects.inv  pvs.html  py-modindex.html  pyproject.toml  registers.html  ruff.toml  search.html  searchindex.js  threads.html
.doctrees/: _api.doctree  architectural_decision_records.doctree  codeautolink-cache.json  environment.pickle  index.doctree  local_development.doctree  pvs.doctree  registers.doctree  threads.doctree
.doctrees/__intersphinx_cache__/: p4p_objects.inv
.doctrees/architectural_decision_records/: 001_epics_server_structure.doctree  002_general_architecture.doctree
.github/: dependabot.yml  release.yml
.github/workflows/: Lint-and-test.yml  containerfile-upload.yml  documentation.yml  lint-and-test-nightly.yml  release.yml
_modules/: index.html
_modules/kafka_dae_control/: cli.html  comms.html  config.html  data.html  defaults.html  event_with_value.html  firmware_xml.html  process_worker_event.html  run_start_nexus_structure.html  save_restore.html  serve.html  udptalk.html  worker_event_handlers.html  worker_event_types.html
_modules/kafka_dae_control/pvs/: camonitor_callbacks.html  static_pvs.html
_modules/kafka_dae_control/threads/: hardware_polling_thread.html  update_pvs_thread.html
_sources/: _api.rst.txt  architectural_decision_records.md.txt
_sources/architectural_decision_records/: 002_general_architecture.md.txt
_static/: documentation_options.js
_static/css/: custom.css
architectural_decision_records/: 001_epics_server_structure.html  002_general_architecture.html
doc/: _api.rst  conf.py  index.md  local_development.md  pvs.md  registers.md  spelling_wordlist.txt  threads.md
doc/architectural_decision_records/: 001_epics_server_structure.md  001_server_structure.md  002_general_architecture.md
example_xml/: vxiscb_supermusr_ic_memory_map_output.html  vxiscb_supermusr_ic_memory_map_output.xml
src/kafka_dae_control/: __init__.py  _connection.py  _controllers.py  _io.py  _types.py  blocks.py  cli.py  comms.py  config.py  data.py  defaults.py  event_with_value.py  firmware_xml.py  hooks.py  process_worker_event.py  run_start_nexus_structure.py  run_state.py  save_restore.py  serve.py  static_pvs.py  udptalk.py  worker_event.py  worker_event_handlers.py  worker_event_types.py
src/kafka_dae_control/pvs/: __init__.py  blocks.py  camonitor_callbacks.py  static_pvs.py
src/kafka_dae_control/threads/: __init__.py  hardware_polling_thread.py  update_pvs_thread.py
src/kafka_dae_diagnostics/: __init__.py
tests/: conftest.py  firmware_xml_for_tests.py  test_blocks.py  test_camonitor_callbacks.py  test_comms.py  test_config.py  test_event_with_value.py  test_firmware_xml.py  test_hooks.py  test_nothing.py  test_observable_field.py  test_run_start_nexus_structure.py  test_run_state_change.py  test_save_restore.py  test_serve.py  test_worker_event.py  test_worker_event_handlers.py
tests/threads/: test_hardware_polling_thread.py  test_update_pvs_thread.py
