[project]
name = "kafka_dae_control"
version = "0.1.0"
description = "Data streaming software for communicating with the detector hardware and start and stop kafka runs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioca",
    "aiokafka",
    "ess-streaming-data-types",
    "ibex_non_ca_helpers"
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pyright"]
