[build-system]
requires = ["setuptools", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-dae-control"  # REQUIRED, is the only field that cannot be marked as dynamic.
dynamic = ["version"]
description = "ISIS Kafka DAE control"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]

authors = [
  {name = "ISIS Experiment Controls", email = "ISISExperimentControls@stfc.ac.uk" }
]
maintainers = [
  {name = "ISIS Experiment Controls", email = "ISISExperimentControls@stfc.ac.uk" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "p4p", # For serving kdaectrl PVs
  "isis-streaming-data-types", # for constructing run starts/stops.
  "confluent-kafka", # For kafka ops
  "pyepics", # for getting parts of run-start nexus structure from blockserver
  "ibex-non-ca-helpers", # for utilities like dehex_and_decompress
  "pydantic<3",
  "tzdata; platform_system == 'Windows'",
]

[project.scripts]
udptalk = "kafka_dae_control.udptalk:main"
kdaectrl = "kafka_dae_control.cli:main"

[project.optional-dependencies]
doc = [
  "sphinx", 
  "sphinx_rtd_theme", 
  "myst_parser",
  "sphinx-autobuild",
  "sphinx-codeautolink",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-spelling",
]
lint = [
  "pyright",
  "ruff",
]
test = [
  "lewis",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
dev = [
  "kafka-dae-control[doc,lint,test]",
]

[project.urls]
"Homepage" = "https://github.com/isiscomputinggroup/kafka_dae_control"
"Bug Reports" = "https://github.com/isiscomputinggroup/kafka_dae_control/issues"
"Source" = "https://github.com/isiscomputinggroup/kafka_dae_control"

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
addopts = "--cov --cov-report=html -vv"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "version.py",  # Autogenerated
  "udptalk.py",  # no logic here other than argparse
  "cli.py", # no logic here either
  "static_pvs.py"  # there doesn't seem to be a way of testing p4p handlers
]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pyright]
include = ["src", "tests"]
reportConstantRedefinition = true
reportDeprecated = true
reportInconsistentConstructor = true
reportMissingParameterType = true
reportMissingTypeArgument = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUntypedBaseClass = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true

[tool.setuptools_scm]
version_file = "src/kafka_dae_control/version.py"

[tool.build_sphinx]
